welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: ';' expected but 'while' found.
		} while (!croisement)
                  ^Poucet:11: error: 'while' expected but 'if' found.
	if (nb<3) {
        ^Poucet:17: error: '(' expected but '}' found.
}
^